--- a/style.css
+++ b/style.css
@@ -4,4 +4,6 @@ body {
 .container {
     display: grid;
     height: 100vh;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
 }
