--- a/styles/term-style.css
+++ b/styles/term-style.css
@@ -1,3 +1,37 @@
 body {
-    background-color: rgb(7, 7, 68);
+    background-color: rgb(3, 3, 46);
+}
+
+.content-table {
+    /* border-collapse: collapse; */
+    margin: 25px 0;
+    font-size: 0.9em;
+    min-width: 400px;
+}
+
+.content-table thead tr {
+    background-color: azure;
+    color: blue;
+    text-align: left;
+}
+
+.content-table th {
+    padding: 12px 15px;
+    color: rgb(110, 85, 209);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.content-table td {
+    padding: 12px 15px;
+    color: rgb(110, 85, 209);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.content-table tbody tr {
+    border-bottom: 1px solid #4e02ffdd;
+}
+
+.term-label {
+    color: azure;
+    font-size: xx-large;
 }
