--- a/styles/term-style.css
+++ b/styles/term-style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(3, 3, 46);
+    background: linear-gradient(to right, #000941, #081178);
 }
 
 .content-table {
@@ -36,6 +36,7 @@ body {
     border-bottom: 1px solid #4e02ffdd;
 }
 
+/* Add highlighting to even numbered elements in rows */
 .content-table tbody tr:nth-of-type(even) {
     /* background-color: rgb(174, 135, 212); */
 }
@@ -53,16 +54,16 @@ body {
     /* Centering Logic End*/
 }
 
- /* Popup container */
- .popup {
+/* Popup container */
+.popup {
     color: aliceblue;
     position: relative;
     display: inline-block;
     cursor: pointer;
-  }
-  
-  /* The actual popup (appears on top) */
-  .popup .popuptext {
+}
+
+/* The actual popup (appears on top) */
+.popup .popuptext {
     visibility: hidden;
     width: 160px;
     background-color: #555;
@@ -75,10 +76,10 @@ body {
     bottom: 125%;
     left: 50%;
     margin-left: -80px;
-  }
-  
-  /* Popup arrow */
-  .popup .popuptext::after {
+}
+
+/* Popup arrow */
+    .popup .popuptext::after {
     content: "";
     position: absolute;
     top: 100%;
@@ -87,22 +88,37 @@ body {
     border-width: 5px;
     border-style: solid;
     border-color: #555 transparent transparent transparent;
-  }
-  
-  /* Toggle this class when clicking on the popup container (hide and show the popup) */
-  .popup .show {
+}
+
+/* Toggle this class when clicking on the popup container (hide and show the popup) */
+.popup .show {
     visibility: visible;
     -webkit-animation: fadeIn 1s;
     animation: fadeIn 1s
-  }
-  
-  /* Add animation (fade in the popup) */
-  @-webkit-keyframes fadeIn {
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
     from {opacity: 0;}
     to {opacity: 1;}
-  }
-  
-  @keyframes fadeIn {
+}
+
+@keyframes fadeIn {
     from {opacity: 0;}
     to {opacity:1 ;}
-  } 
+}
+
+/* Style buttons */
+.btn {
+    background-color: DodgerBlue; /* Blue background */
+    border: none; /* Remove borders */
+    color: white; /* White text */
+    padding: 12px 16px; /* Some padding */
+    font-size: 16px; /* Set a font size */
+    cursor: pointer; /* Mouse pointer on hover */
+}
+
+/* Darker background on mouse-over */
+.btn:hover {
+    background-color: RoyalBlue;
+}
