--- a/styles/term-style.css
+++ b/styles/term-style.css
@@ -2,6 +2,9 @@ body {
     background: linear-gradient(to right, #000941, #081178);
 }
 
+.center {
+    text-align: center;
+}
 .content-table {
     border-collapse: collapse;
     margin: 25px 0;
@@ -48,6 +51,7 @@ body {
     color: azure;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: xx-large;
+    text-align: center;
     /* Centering Logic */
     margin-left: auto;
     margin-right: auto;
@@ -112,6 +116,7 @@ body {
 .btn {
     background-color: DodgerBlue; /* Blue background */
     border: none; /* Remove borders */
+    border-radius: 10px;
     color: white; /* White text */
     padding: 12px 16px; /* Some padding */
     font-size: 16px; /* Set a font size */
