--- a/styles/term-style.css
+++ b/styles/term-style.css
@@ -112,8 +112,8 @@ body {
     to {opacity:1 ;}
 }
 
-/* Style buttons */
-.btn {
+/* Style home button */
+.home-btn {
     background-color: DodgerBlue; /* Blue background */
     border: none; /* Remove borders */
     border-radius: 10px;
@@ -124,6 +124,58 @@ body {
 }
 
 /* Darker background on mouse-over */
-.btn:hover {
+.home-btn:hover {
     background-color: RoyalBlue;
+}
+
+.popup-form {
+    background: linear-gradient(to right, rgb(9, 9, 133), rgb(0, 35, 68));
+    border-radius: 10px;
+    box-shadow: 2px 2px 5px 5px rgba(0, 0, 0, 0.15);
+    opacity: 0;
+    position: absolute;
+    padding: 20px 30px;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    width: 380px;
+
+}
+
+.popup-form .form h2 {
+    color: #c7d2fd;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+
+.popup-form.active {
+    opacity: 1;
+}
+
+.popup-form .close-btn {
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 20px;
+    text-align: center;
+    background: rgb(255, 255, 255);
+    line-height: 20px;
+    border-radius: 20px;
+}
+
+.form-element {
+    color: lightblue;
+    display: block;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 10px;
+    width: 100%;
+}
+
+.popup-form .form .form-element button {
+    width: 100%;
+    height: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
 }
