--- a/styles/term-style.css
+++ b/styles/term-style.css
@@ -128,6 +128,28 @@ body {
     background-color: RoyalBlue;
 }
 
+/* Plus logo begin */
+.plus {
+    display:inline-block;
+    width:50px;
+    height:50px;
+
+    background:
+        linear-gradient(#000000 0 0),
+        linear-gradient(#000000 0 0),
+        #ffffff;
+    background-position:center;
+    background-size: 50% 2px,2px 50%; /*thickness = 2px, length = 50% (25px)*/
+    background-repeat:no-repeat;
+    cursor: pointer;
+}
+
+.radius {
+    border-radius:50%;
+}
+
+/* Plus logo end */
+
 .popup-form {
     background: linear-gradient(to right, rgb(9, 9, 133), rgb(0, 35, 68));
     border-radius: 10px;
