--- a/styles/term-style.css
+++ b/styles/term-style.css
@@ -114,10 +114,10 @@ body {
 
 /* Style home button */
 .home-btn {
-    background-color: DodgerBlue; /* Blue background */
+    background-color: rgb(255, 255, 255); /* Blue background */
     border: none; /* Remove borders */
     border-radius: 10px;
-    color: white; /* White text */
+    color: rgb(0, 0, 0); /* White text */
     padding: 12px 16px; /* Some padding */
     font-size: 16px; /* Set a font size */
     cursor: pointer; /* Mouse pointer on hover */
