Add different color for all even rows in table
Add a different shade of color for all even rows in the table which keeps track of all applications.

--- a/styles/term-style.css
+++ b/styles/term-style.css
@@ -41,7 +41,7 @@ body {
 
 /* Add highlighting to even numbered elements in rows */
 .content-table tbody tr:nth-of-type(even) {
-    /* background-color: rgb(174, 135, 212); */
+    background-color: rgb(25, 22, 112);
 }
 
 .content-table tbody tr:last-of-type {
