--- a/styles/term-style.css
+++ b/styles/term-style.css
@@ -31,7 +31,7 @@ body {
 
 .content-table td {
     padding: 12px 15px;
-    color: rgb(110, 85, 209);
+    color: rgb(168, 148, 246);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -148,6 +148,9 @@ body {
     border-radius:50%;
 }
 
+.plus:hover{
+    background-color: royalblue;
+}
 /* Plus logo end */
 
 .popup-form {
