--- a/styles/term-style.css
+++ b/styles/term-style.css
@@ -75,26 +75,23 @@ body {
 }
 
 /* Plus logo begin */
-.plus {
+.plus-btn {
     display:inline-block;
     width:50px;
     height:50px;
-
+    margin-right: 10px; /* Create distance between undo button next to it*/
     background:
         linear-gradient(#000000 0 0),
         linear-gradient(#000000 0 0),
         #ffffff;
+    border-radius:50%;
     background-position:center;
     background-size: 50% 2px,2px 50%; /*thickness = 2px, length = 50% (25px)*/
     background-repeat:no-repeat;
     cursor: pointer;
 }
 
-.radius {
-    border-radius:50%;
-}
-
-.plus:hover{
+.plus-btn:hover{
     background-color: royalblue;
 }
 /* Plus logo end */
@@ -150,3 +147,22 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: large;
 }
+
+/* Begin undo button */
+.undo-btn {  
+    display:inline-block;
+    width:50px;
+    height:50px;
+    margin-right: 10px; /* Create distance between undo button next to it*/
+    background:#ffffff;
+    border-radius:50%;
+    background-position:center;
+    background-size: 50% 2px,2px 50%; /*thickness = 2px, length = 50% (25px)*/
+    background-repeat:no-repeat;
+    cursor: pointer;
+}
+
+.undo-btn:hover{
+    background-color: royalblue;
+}
+/* End undo button */
