--- a/styles/term-style.css
+++ b/styles/term-style.css
@@ -96,6 +96,7 @@ body {
 }
 /* Plus logo end */
 
+/* Popup form begin*/
 .popup-form {
     background: linear-gradient(to right, rgb(9, 9, 133), rgb(0, 35, 68));
     border-radius: 10px;
@@ -104,7 +105,7 @@ body {
     position: absolute;
     padding: 20px 30px;
     top: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(0);
     left: 50%;
     width: 380px;
 
@@ -117,6 +118,8 @@ body {
 }
 
 .popup-form.active {
+    transform: translate(-50%, -50%) scale(1);
+
     opacity: 1;
 }
 
@@ -147,6 +150,8 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: large;
 }
+/* Popup form end*/
+
 
 /* Begin undo button */
 .undo-btn {  
