--- a/styles/term-style.css
+++ b/styles/term-style.css
@@ -5,6 +5,7 @@ body {
 .center {
     text-align: center;
 }
+
 .content-table {
     border-collapse: collapse;
     margin: 25px 0;
@@ -47,11 +48,13 @@ body {
 .content-table tbody tr:last-of-type {
     border-bottom: 2px solid rgb(198, 184, 255);;
 }
+
 .term-label {
     color: azure;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: xx-large;
     text-align: center;
+    font-weight: bold;
     /* Centering Logic */
     margin-left: auto;
     margin-right: auto;
@@ -106,20 +109,21 @@ body {
     padding: 20px 30px;
     top: 50%;
     transform: translate(-50%, -50%) scale(0);
+    /* transition: 200ms ease-in-out; */
     left: 50%;
     width: 380px;
-
+    z-index: 10; /* Overlay logic */
 }
 
 .popup-form .form h2 {
     color: #c7d2fd;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    font-weight: bold;
 }
 
 .popup-form.active {
     transform: translate(-50%, -50%) scale(1);
-
     opacity: 1;
 }
 
@@ -140,15 +144,34 @@ body {
     color: lightblue;
     display: block;
     font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
     margin-bottom: 10px;
     width: 100%;
 }
 
 .popup-form .form .form-element button {
+    cursor: pointer;
     width: 100%;
     height: 40px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: large;
+}
+
+#overlay {
+    position: fixed;
+    opacity: 0;
+    transition: 200ms ease-in-out;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .5);
+    pointer-events: none;
+}
+
+#overlay.active {
+    pointer-events: all;
+    opacity: 1;
 }
 /* Popup form end*/
 
