--- a/styles/term-style.css
+++ b/styles/term-style.css
@@ -61,6 +61,19 @@ body {
     /* Centering Logic End*/
 }
 
+.num-apps-label {
+    margin-left: 100px;
+    color: azure;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: x-large;
+    text-align: center;
+    font-weight: bold;
+    /* Centering Logic */
+    /* margin-left: auto; */
+    margin-right: auto;
+    /* Centering Logic End*/
+}
+
 /* Style home button */
 .home-btn {
     background-color: rgb(255, 255, 255); /* Blue background */
