--- a/styles/style.css
+++ b/styles/style.css
@@ -41,3 +41,83 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: xx-large;
 }
+
+/* Popup form begin*/
+.popup-form {
+    background: linear-gradient(to right, rgb(9, 9, 133), rgb(0, 35, 68));
+    border-radius: 10px;
+    box-shadow: 2px 2px 5px 5px rgba(0, 0, 0, 0.15);
+    opacity: 0;
+    position: absolute;
+    padding: 20px 30px;
+    top: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    /* transition: 200ms ease-in-out; */
+    left: 50%;
+    width: 380px;
+    z-index: 10; /* Overlay logic */
+}
+
+.popup-form .form h2 {
+    color: #c7d2fd;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-weight: bold;
+}
+
+.popup-form.active {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+}
+
+.popup-form .close-btn {
+    color: rgb(0, 0, 0);
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 20px;
+    text-align: center;
+    background: rgb(255, 255, 255);
+    line-height: 20px;
+    border-radius: 20px;
+}
+
+.popup-form .close-btn:hover {
+    background-color: royalblue;
+}
+
+.form-element {
+    color: lightblue;
+    display: block;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    margin-bottom: 10px;
+    width: 100%;
+}
+
+.popup-form .form .form-element button {
+    cursor: pointer;
+    width: 100%;
+    height: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+}
+
+#overlay {
+    position: fixed;
+    opacity: 0;
+    transition: 200ms ease-in-out;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, .5);
+    pointer-events: none;
+}
+
+#overlay.active {
+    pointer-events: all;
+    opacity: 1;
+}
+/* Popup form end*/
