--- a/styles/term-style.css
+++ b/styles/term-style.css
@@ -269,3 +269,20 @@ body {
     border-radius: 50px; */
     /* font-size: x-large; */
 }
+
+.edit-btn {
+    margin-left: 10px;
+    margin-top: 10px;
+    cursor: pointer;
+    border: none;
+    border-radius: 50px;
+    font-size: larger;
+    background: white;
+}
+
+.btn-container {
+    position: fixed;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
