Add functionality to make multiple charts

--- a/styles/term-style.css
+++ b/styles/term-style.css
@@ -364,7 +364,7 @@ body {
     font-weight: bold;
 }
 
-#chart-canvas-container {
-    max-width: 20px;
-    max-height: 20px;
+#chart-canvas {
+    width: 50%;
+    height: 50%;
 }
