--- a/styles/term-style.css
+++ b/styles/term-style.css
@@ -335,8 +335,8 @@ body {
     transform: translate(-50%, -50%) scale(0);
     /* transition: 200ms ease-in-out; */
     left: 50%;
-    width: 90%;
-    height: 90%;
+    width: 80%;
+    height: 80%;
     z-index: 10; /* Overlay logic */
 }
 
@@ -373,3 +373,16 @@ body {
     width: 50%;
     height: 50%;
 }
+
+.analytics-btn-container label {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+    color: #d1e0ff;
+}
+
+.analytics-btn-container {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+/* End of the analytics popup */
